# django-jalali

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  README.rst  index.html  manage.py  params.json  requirements-test.txt  run_tests.bash  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE
.github/workflows/: python-publish.yml  test.yml
admin/: __init__.py  filterspecs.py  widgets.py
db/: models.py
django_jalali/: settings.py
django_jalali/admin/: __init__.py  filters.py  filterspecs.py  widgets.py
django_jalali/db/: models.py
django_jalali/fixtures/: initial_unittest_info.json
django_jalali/forms/: __init__.py  widgets.py
django_jalali/serializers/: serializerfield.py
django_jalali/static/admin/: main.js
django_jalali/templatetags/: jformat.py
django_jalali/tests/: __init__.py  custom_settings.py  models.py
forms/: __init__.py  widgets.py
forms/widgets/: __init__.py
jalali_test/: manage.py
jalali_test/foo/: admin.py  apps.py  models.py  serializers.py  tests.py
jalali_test/foo/migrations/: 0001_initial.py
jalali_test/jalali_test/: settings.py  urls.py  wsgi.py
jalali_test/jalali_test/settings/: test1_settings.py  test2_settings.py
jalali_test_2_0/: manage.py
jalali_test_2_0/foo/: models.py  tests.py
jalali_test_2_0/foo/migrations/: 0001_initial.py
jalali_test_2_0/jalali_test_2_0/: settings.py  urls.py  wsgi.py
tests/: admin.py  models.py  serializers.py  settings.py  test_admin.py  test_forms.py  test_models.py  test_serializer.py  test_settings.py  test_templatetags.py  urls.py
(+10 files in other folders)
