[metadata]
name = django-jalali
version = 6.2.1
description = Jalali Date support for Django model and admin interface
url = http://github.com/slashmili/django-jalali
download_url = http://github.com/slashmili/django-jalali/tarball/master
author = Milad Rastian
author_email = eslashmili@gmail.com
keywords = django jalali
license = Python Software Foundation License
platforms = any
python_requires= ">=3.8"
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    jdatetime>=5.0.0
    django>=3.2

[options.extras_require]
drf = djangorestframework>=3.12

[flake8]
max-line-length = 110

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django_jalali
line_length = 79
multi_line_output = 5

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings